fixed alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,12 +40,6 @@ body {
   background-repeat: no-repeat;
   height: 16rem;
 }
-/* .custom-div {
-  background-image: url("/vector.png");
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-} */
 
 .image-container {
   display: flex;
@@ -54,7 +48,7 @@ body {
 }
 @media screen and (min-width: 1280px) {
   .custom-div {
-  background-image: url("/vector.png");
+  background-image: url("/Vector1.png");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
@@ -65,11 +59,6 @@ body {
     display: flex;
     width: 100%;
     justify-content: space-evenly;
-    /* background-image: url("/vector.png");
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    transform: rotate(90deg); */
   }
   .custom-div::before {
     content: "";
@@ -78,7 +67,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/vector.png");
+    background-image: url("/Vector1.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
